tests/fixtures/workflows/nested/invalid/recursive-b.invalid
export const meta = {
  name: "recursive-b",
  description: "Indirect recursion B"
};

return await workflow({ name: "recursive-a" });
